# promptshield-llm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/promptshield/: __init__.py  core.py
tests/: test_core.py
