[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "promptshield-llm"
version = "0.1.0"
description = "Redact sensitive data from LLM prompts before sending them to a model."
readme = "README.md"
requires-python = ">=3.10"
license = "MPL-2.0"
authors = [
    { name = "Eduardo J. Barrios", email = "edujbarrios@outlook.com" },
]
keywords = ["llm", "prompt", "redaction", "privacy", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/edujbarrios/promptshield-llm"
Issues = "https://github.com/edujbarrios/promptshield-llm/issues"

[tool.setuptools.packages.find]
where = ["src"]
